Button to update grid scale

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
+    <button id="updateBtn">Update Grid Scale</button>
     <h1>Etch A Sketch</h1>
     <div id="grid"></div>
     <script src="scripts/script.js"></script>
